# app/Http/Controllers/CatagoriesController.php
@@ -10,22 +10,11 @@ class CatagoriesController extends Controller
     /**
      * @OA\Get(
      *     path="/api/get_catagories",
-     *     tags={"catagories"},
+     *     tags={"Catagories"},
      *     summary="Get all catagories",
      *     description="Multiple status values can be provided with comma separated string",
      *     operationId="getCatagories",
-     *     @OA\Parameter(
-     *         name="status",
-     *         in="query",
-     *         description="Status values that needed to be considered for filter",
-     *         required=true,
-     *         explode=true,
-     *         @OA\Schema(
-     *             default="available",
-     *             type="string",
-     *             enum={"available", "pending", "sold"},
-     *         )
-     *     ),
+     *     security={{"bearer":{}}},
      *     @OA\Response(
      *         response=200,
      *         description="successful operation",
@@ -36,7 +25,6 @@ class CatagoriesController extends Controller
      *     ),
      * )
      */
-
     public function getCatagories()
     {
         $catagories = Catagory::all();
